Fixed the spacing issue between the label and account type

--- a/src/css/Registration.css
+++ b/src/css/Registration.css
@@ -39,6 +39,7 @@ html, body {
     font-size: 10px;
     color: #555555;
     margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 .form input {
@@ -101,10 +102,13 @@ html, body {
     background-repeat: no-repeat;
     background-size: ontain;
     position: absolute;
-    width: 100%;
-    height: 80%;
+    /* width: 100%;
+    height: 80%; */
     top: 15%;
-    right: 200px;
+    right: 40%;
+    max-width: 80%;
+    height: auto;
+    width: auto\9;
     /* margin: 10% 5% 10% 0%; */
     /* margin: 10px auto 0px; */
     border-radius: 20px;
